CSS: spacing tokens, global styles, fix font file loading; base layout

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'NotoSans';
-  src: url('/fonts/NotoSans-VariableFont_wdth,wght.ttf') format('ttf');
+  src: url('/fonts/NotoSans-VariableFont_wdth,wght.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,8 @@
 
 @font-face {
   font-family: 'NotoSansItalic';
-  src: url('/fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf');
+  src: url('/fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf')
+    format('truetype');
   font-weight: 400;
   font-style: italic;
   font-display: swap;
@@ -16,7 +17,7 @@
 
 @font-face {
   font-family: 'NotoSansMono';
-  src: url('/fonts/NotoSansMono-VariableFont_wdth,wght.ttf') format('ttf');
+  src: url('/fonts/NotoSansMono-VariableFont_wdth,wght.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
